Make sure margins ALWAYS collapse inside an aside or figure.

--- a/html/alex/assets/styles.css
+++ b/html/alex/assets/styles.css
@@ -317,7 +317,7 @@ figure, aside {
 
 /* Collapse margin for all in container or aside. */
 figure > *, aside > * {
-	margin: 0px;
+	margin: 0px !important;
 }
 
 /* Style for the special 'back to top' link. */
